export interface ISubscriber {
    update(): void;
}