export class Vector3 {
  public x: number;
  public y: number;
  public z: number;

  constructor(_x: number, _y: number, _z: number) {
    this.x = _x;
    this.y = _y;
    this.z = _z;
  }
}
